--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/maker-bundle": "^1.1",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/security-csrf": "^3.4",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
         "symfony/web-server-bundle": "^3.4",
